--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
             <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-            <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -38,6 +38,7 @@
       <div class="container px-4 px-lg-3 d-flex h-100 align-items-center justify-content-center">
         <div class="d-flex justify-content-center">
           <div class="text-center">
+            <p class="text-white"><span>Hi, my name is</span></p>
             <h1 class="mx-auto my-0 text-uppercase">Dian Trado Ginting</h1>
             <p class="text-white">I'm a <span class="typed" data-typed-items="Graphic Designer, Developer, Freelancer, Translator"></span></p>
           </div>
@@ -51,9 +52,9 @@
           <div class="col-lg-8">
             <h2 class="text-white mb-4">About</h2>
             <p class="text-white-50">
-              Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="https://startbootstrap.com/theme/grayscale/">the preview page.</a>
-              The theme is open source, and you can use it for any purpose, personal or commercial.
+              Hi, I'm a freelancer, I have skills in web development. I specialized in HTML, CSS and I can use Bootstrap well. I also have skills in graphic design and can use tools such as Photoshop and Corel Draw. I can also make digital
+              arts and painting I Graduated from University and have a Diploma majoring in English. Right now, I'm still learning to improve my web developing skills to be able to fully understand about Front-end and also Back-end web
+              development.
             </p>
           </div>
         </div>
@@ -65,6 +66,7 @@
       <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <h2 class="text-black mb-4 text-center">Projects</h2>
+          <p class="text-black text-center">Here are some of the projects that I have been working on up until now</p>
           <!-- Featured Project Row-->
           <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
             <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
@@ -109,7 +111,7 @@
       </div>
     </section>
     <!-- Contact-->
-    <section class="contact-section bg-black">
+    <section class="contact-section bg-black" id="contact">
       <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5">
           <div class="col-md-4 mb-3 mb-md-0">
@@ -118,7 +120,7 @@
                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Address</h4>
                 <hr class="my-4 mx-auto" />
-                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                <div class="small text-black-50">Medan, North Sumatera, Indonesia</div>
               </div>
             </div>
           </div>
