--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="d-flex justify-content-center">
           <div class="text-center">
             <p class="text-white"><span>Hi, my name is</span></p>
-            <h1 class="mx-auto my-0 text-uppercase">Dian Trado Ginting</h1>
+            <h1 class="mx-auto my-0 text-uppercase">Dian Trado<br />Ginting</h1>
             <p class="text-white">I'm a <span class="typed" data-typed-items="Graphic Designer, Developer, Freelancer, Translator"></span></p>
           </div>
         </div>
