--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <i class="fas fa-envelope text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Email</h4>
                 <hr class="my-4 mx-auto" />
-                <div class="small text-black-50"><a href="mailto: trado.gin@gmail.com" target="_parent">trado.gin@gmail.com</a></div>
+                <div class="small text-black-50"><a href="mailto: trado.gin@gmail.com" target="_blank">trado.gin@gmail.com</a></div>
               </div>
             </div>
           </div>
@@ -202,13 +202,13 @@
                 </i>
                 <h4 class="text-uppercase m-1">whatsapp</h4>
                 <hr class="my-4 mx-auto" />
-                <div class="small text-black-50"><a href="https://wa.me/qr/XTBKKC6CMYSLD1">+62 895 6034 84492</a></div>
+                <div class="small text-black-50"><a href="https://wa.me/qr/XTBKKC6CMYSLD1" target="_blank">+62 895 6034 84492</a></div>
               </div>
             </div>
           </div>
         </div>
         <div class="social d-flex justify-content-center">
-          <a class="mx-2" href="https://instagram.com/dian.trado?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+          <a class="mx-2" href="https://instagram.com/dian.trado?igshid=YmMyMTA2M2Y=" target="_blank"><i class="fab fa-instagram"></i></a>
           <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
           <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
         </div>
