--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Portfolio-Dian_Trado_Ginting</title>
@@ -53,13 +53,17 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-lg-8 row">
             <h2 class="text-white mb-4" data-aos="zoom-out" data-aos-once="true">About</h2>
-            <p class="text-white-50 justify-content-end col text-end mx-3" data-aos="fade-right" data-aos-once="true">
-              Hi, I'm a freelancer, I have skills in web development. I specialized in HTML, CSS and I can use Bootstrap well. I also have skills in graphic design and can use tools such as Photoshop and Corel Draw. I can also make digital
-              arts and painting.
-            </p>
-            <p class="text-white-50 justify-content-start col text-start mx-3" data-aos="fade-left" data-aos-once="true">
-              I Graduated from University and have a Diploma majoring in English. Right now, I'm still learning to improve my web developing skills to be able to fully understand about Front-end and also Back-end web development.
-            </p>
+            <div class="col about-text">
+              <p class="text-white-50 text-end" data-aos="zoom-in-right" data-aos-once="true">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium sed magni voluptates asperiores accusantium, recusandae quidem veritatis qui accusamus nemo, cupiditate itaque pariatur id tempora est fugit inventore
+                reprehenderit saepe?
+              </p>
+            </div>
+            <div class="col about-text">
+              <p class="text-white-50 text-start" data-aos="zoom-in-left" data-aos-once="true">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolores, a numquam velit illo voluptate aperiam neque temporibus optio eos ea recusandae quam voluptatibus, nam officiis ipsam, nesciunt eum? Doloribus.
+              </p>
+            </div>
           </div>
         </div>
       </div>
